<resources>
    <string name="app_name">MinervaScoutingSubsystemAndroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Scouting</string>
    <string name="menu_gallery">Schedule</string>
    <string name="menu_tools">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_tcp">TCP Communication</string>
    <string name="menu_data">Data Communication</string>
</resources>
